--- a/style.css
+++ b/style.css
@@ -1,22 +1,30 @@
+html {
+    background-color:  #2B81AC;
+    border: 25px;
+    width: 100%;
+    height: 100%;
+   
+ }
+
 body {
     font-size: 100%;
 }
 
 .main {
-    Width: 1440px;
-Height: 900px;
-Top: -711px;
-Left: -737px;
-Border: 25px;
-background-color: #3399CC;
+    Width: 100%;
+    Height: 100%;
+    Top: -711px;
+    Left: -737px;
+    Border: 25px;
+    background-color: #3399CC;
 }
  
 .h3 {
     Width: 263px;
-Height: 34px;
-Top: 60px;
-Left: 135px;
-color: white;
+    Height: 34px;
+    Top: 60px;
+    Left: 135px;
+    color: white;
 }
 
 .p {
@@ -26,7 +34,7 @@ color: white;
     left: 137px;
     gap: 0px;
     opacity: 0px;
-color: white;    
+    color: white;    
 }
 
 .ul li {
@@ -41,18 +49,169 @@ color: white;
     font-family: sans-serif;
     text-align: center;
     padding: 10px;
+    font-size: 0;
     border: 2px #ffffff;
 }
 
 .li {
-    width: 108px;
-    height: 94px;
-    top: 157px;
-    left: 374px;
+    width: 291.5px;
+    height: 147px;
+    top: 131px;
+    left: 137px;
+    gap: 0px;
+    border: 2px 0px 0px 0px;
+    opacity: 0px;
+    text-align: center;
+    font-size: 25px;
+    background: #3399CC;
+    border: 2px solid #FFFFFF
+
+}
+
+.li-2 {
+    width: 291.5px;
+    height: 147px;
+    top: 131px;
+    left: 720px;
+    gap: 0px;
+    border: 2px 0px 0px 0px;
+    opacity: 0px;
+    text-align: center;
+    font-size: 25px;
+    background: #33CCCC;
+    border: 2px solid #FFFFFF
+}
+
+.content {
+    width: 1170px;
+    height: 592px;
+    top: 129px;
+    left: 135px;
     gap: 0px;
     opacity: 0px;
-    border: 2px 0px 0px 0px;   
-    text-align: center;
-background: orange;
 
+}
+
+.li-3 {
+    width: 291.5px;
+height: 147px;
+top: 131px;
+left: 1011px;
+gap: 0px;
+opacity: 0.7px;
+border: 2px;
+text-align: center;
+font-size: 25px;
+background: #996699;
+border: 2px solid #FFFFFF
+}
+
+.li-4 {
+    width: 583px;
+    height: 147px;
+    top: 131px;
+    left: 137px;
+    gap: 0px;
+    border: 2px 0px 0px 0px;
+    opacity: 0px;
+    text-align: center;
+    font-size: 25px;
+    background: #C24747;
+    border: 2px solid #FFFFFF
+}
+
+.li-5 {
+    width: 583px;
+    height: 147px;
+    top: 131px;
+    left: 137px;
+    gap: 0px;
+    border: 2px 0px 0px 0px;
+    opacity: 0px;
+    text-align: center;
+    font-size: 25px;
+    background: #E2674A;
+    border: 2px solid #FFFFFF
+} 
+
+.li-6 {
+    width: 291.5px;
+height: 147px;
+top: 278px;
+left: 720px;
+gap: 0px;
+border: 2px 0px 0px 0px;
+opacity: 0px;
+text-align: center;
+font-size: 25px;
+background:#FFCC66;
+border: 2px solid #FFFFFF
+}
+
+.li-7 {
+    width: 291.5px;
+height: 147px;
+top: 278px;
+left: 1011px;
+gap: 0px;
+border: 2px 0px 0px 0px;
+opacity: 0px;
+text-align: center;
+font-size: 25px;
+background:#99CC99;;
+border: 2px solid #FFFFFF
+}
+
+.li-8 {
+    width: 291.5px;
+height: 147px;
+top: 425px;
+left: 137px;
+gap: 0px;
+opacity: 0.7px;
+text-align: center;
+font-size: 25px;
+background: #669999;
+border: 2px solid #FFFFFF
+}
+
+.li-9 {
+    width: 583px;
+    height: 147px;
+    top: 425px;
+    left: 428px;
+    gap: 0px;
+    border: 2px 0px 0px 0px;
+    opacity: 0px;    
+text-align: center;
+font-size: 25px;
+background:#CC6699;
+border: 2px solid #FFFFFF
+}
+
+.li-10 {
+    width: 291.5px;
+height: 147px;
+top: 425px;
+left: 1011px;
+gap: 0px;
+opacity: 0.7px;
+text-align: center;
+font-size: 25px;
+background:#339966;
+border: 2px solid #FFFFFF
+}
+
+.li-11 {
+    width: 1166px;
+height: 147px;
+top: 572px;
+left: 137px;
+gap: 0px;
+border: 2px 0px 0px 0px;
+opacity: 0px;
+text-align: center;
+font-size: 25px;
+background:#666699;
+border: 2px solid #FFFFFF
 }
